@@ -84,6 +84,9 @@ case "$PLARCH" in
    *darwin*)
 	JAVALIBS="-Wl,-framework,JavaVM"
 	;;
+   *powerpc-linux*)
+	JAVALIBS="-ljava -ljvm"
+	;;
    *)
 	JAVALIBS="-ljava -lverify -ljvm"
 	;;
@@ -112,7 +115,7 @@ if test -r /etc/java/java2.conf; then
   fi
 fi
 
-dnl Sofar, JPL only works with Sun Java
+dnl So far, JPL only works with Sun Java and IBM Java
 
 if test "x$JAVAC" = x; then
   JAVAC=javac
